[package]
name = "fehui-d2d"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"

[dependencies]
piet = "0.0.4"
winapi = { version = "0.3", features = ["d2d1", "d2d1_3", "d3d11", "dxgi1_2", "dxgi1_3"] }
wio = "0.2"
kurbo = { git = "https://github.com/msiglreith/kurbo.git", branch = "rounded_rect" }

[patch.crates-io]
kurbo = { git = "https://github.com/msiglreith/kurbo.git", branch = "rounded_rect" }

[dev-dependencies]
image = "0.21"
winit = "0.18"

[[example]]
name = "landing"
path = "examples/landing.rs"
